@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2011, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2011, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -31,11 +31,7 @@ import java.security.AccessControlContext;
 import java.security.AccessController;
 import java.security.PrivilegedActionException;
 import java.security.PrivilegedExceptionAction;
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
-import java.util.Map;
 import java.util.Set;
 
 public abstract class Utilities {
@@ -54,12 +50,8 @@ public abstract class Utilities {
     protected abstract PopupMenu createPopupMenu();
     protected abstract ContextMenu createContextMenu();
 
-    private static final Set<String> asSet(String... items) {
-        return new HashSet(Arrays.asList(items));
-    }
-
     // List of Class methods to allow
-    private static final Set<String> classMethodsAllowList = asSet(
+    private static final Set<String> CLASS_METHODS_ALLOW_LIST = Set.of(
         "getCanonicalName",
         "getEnumConstants",
         "getFields",
@@ -84,7 +76,7 @@ public abstract class Utilities {
     );
 
     // List of classes to reject
-    private static final Set<String> classesRejectList = asSet(
+    private static final Set<String> CLASSES_REJECT_LIST = Set.of(
         "java.lang.ClassLoader",
         "java.lang.Module",
         "java.lang.Runtime",
@@ -92,7 +84,7 @@ public abstract class Utilities {
     );
 
     // List of packages to reject
-    private static final List<String> packagesRejectList = Arrays.asList(
+    private static final List<String> PACKAGES_REJECT_LIST = List.of(
         "java.lang.invoke",
         "java.lang.module",
         "java.lang.reflect",
@@ -110,17 +102,17 @@ public abstract class Utilities {
         final Class<?> clazz = method.getDeclaringClass();
         if (clazz.equals(java.lang.Class.class)) {
             // check list of allowed Class methods
-            if (!classMethodsAllowList.contains(method.getName())) {
+            if (!CLASS_METHODS_ALLOW_LIST.contains(method.getName())) {
                 throw new UnsupportedOperationException("invocation not supported");
             }
         } else {
             // check list of rejected class names
             final String className = clazz.getName();
-            if (classesRejectList.contains(className)) {
+            if (CLASSES_REJECT_LIST.contains(className)) {
                 throw new UnsupportedOperationException("invocation not supported");
             }
             // check list of rejected packages
-            packagesRejectList.forEach(packageName -> {
+            PACKAGES_REJECT_LIST.forEach(packageName -> {
                 if (className.startsWith(packageName + ".")) {
                     throw new UnsupportedOperationException("invocation not supported");
                 }
